--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
             {% endif %} 
         </div>
         
-        <div class="container-fluid" style="position:relative; height: 100%;">
+        <div class="container-fluid" style="position:relative; flex: 1 1 auto">
             {% block content %}
             {% endblock content %}
         </div>
