Add print or save functionality.

--- a/boards/templates/boards/board_detail.html
+++ b/boards/templates/boards/board_detail.html
@@ -32,6 +32,11 @@
                         Archived Cards
                     </button>
                 </p>
+                <p class="text-right text-nowrap mb-0">
+                    <button class="btn btn-link text-info py-0" onclick="closeNav(); print()">
+                        Print or save
+                    </button>
+                </p>
                 <p class="lead text-center text-nowrap menu-title">Activity Log</p>
             </div>
         </div>
