--- a/boards/templates/boards/board_detail.html
+++ b/boards/templates/boards/board_detail.html
@@ -45,7 +45,7 @@
         <ul class="archived-cards menu-selector list-group list-group-flush" style="display: none;"></ul>
     </div>
 
-    <!-- Modal -->
+    <!-- Card Modal -->
     <div class="modal fade" id="card-modal" role="dialog">
         <div class="modal-dialog">
             <!-- Modal content-->
@@ -57,6 +57,12 @@
                 <div class="modal-body">
                     <p>Some text in the modal.</p>
                     <div class="form-group">
+                        {% for label in board.label_set.all %}
+                            <label for="label-{{label.pk}}" class="btn btn-{{label.color}} border border-dark">
+                                {{label.text}} <input type="checkbox" id="label-{{label.pk}}" data-id="{{label.pk}}" class="badgebox d-none">
+                                <span class="badge badge-light border border-dark">&check;</span>
+                            </label>
+                        {% endfor %}
                         <textarea class="form-control new-comment" placeholder="Write a comment..."></textarea>
                     </div>
                     <button class="btn btn-success save-btn mb-3" onclick="saveComment()">Save</button>
@@ -71,11 +77,62 @@
             </div>
         </div>
     </div>
+
+    <!-- Labels Modal -->
+    <div class="modal fade" id="labels-modal" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Labels</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <input type="text" placeholder="Label text here..." class="new-label-text-inp form-control" id="inputCity">
+                        </div>
+                        <div class="form-group col-md-4">
+                            <select class="new-label-color-select form-control">
+                                <option value="primary" selected>
+                                    Primary
+                                </option>
+                                <option value="secondary">Secondary</option>
+                                <option value="success">Success</option>
+                                <option value="danger">Danger</option>
+                                <option value="warning">Warning</option>
+                                <option value="info">Info</option>
+                                <option value="light">Light</option>
+                                <option value="dark">Dark</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-md-2">
+                            <input type="submit" class="form-control btn btn-success" id="inputZip" value="Add" onclick="addLabel()">
+                        </div>
+                        <div class="error-message mx-auto">                            
+                        </div>
+                    </div>
+                    <div class="board-labels">
+                        {% for label in board.label_set.all %}
+                            <span class="badge badge-{{label.color}} badge-pill">
+                                <span class="align-middle">{{label.text}}</span>
+                                <span class="ml-1 badge badge-pill badge-light text-dark" onclick="deleteLabel(event, {{label.pk}})">x</span>
+                            </span>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="lists">
         <div class="panel d-flex justify-content-between align-items-center">
             <div class="form-group form-inline mb-0">            
                 <input id="invite-email" type="email" class="form-control mr-2" name="invite_email" placeholder="Enter email to invite" />
                 <button class="btn btn-primary form-control" onclick="inviteUser({{board.pk}})">Invite</button>
+                <button class="btn btn-link" data-toggle="modal" data-target="#labels-modal">Labels</button>
             </div>
             <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; More</span>
         </div>
@@ -101,6 +158,15 @@
                                     {% for card in list.card_set.all %}
                                         {% if not card.is_archived %}
                                             <li class="card mb-2" onclick="showCardModal({{list.pk}}, {{card.pk}}, '{{card.title|title}}')" data-id="{{card.pk}}">
+                                                {% if card.labels.all %}
+                                                    <div class="cards-label card-header">
+                                                        {% for label in card.labels.all %}
+                                                            <span class="badge badge-{{label.color}} badge-pill">
+                                                                <span class="align-middle">{{label.text}}</span>
+                                                            </span>
+                                                        {% endfor %}
+                                                    </div>
+                                                {% endif %}
                                                 <div class="card-body d-flex align-items-center justify-content-between">
                                                     <span class="card-title mb-0" data-id="{{card.pk}}">{{card.title|title}}</span>
                                                     <button class="btn btn-link text-danger p-0" onclick="deleteCard(event, {{list.pk}}, {{card.pk}})">X</button>
@@ -127,6 +193,31 @@
     <script>
         const comment = $('#card-modal .new-comment')
 
+        $('.badgebox').on('click', e => {
+            const $checkbox = $(e.target)
+            const labelPK = $checkbox.data('id')
+            const cardPK = $('#card-modal').data('id')
+            const isChecked = $checkbox[0].checked
+            let url = 'card-add-label/'
+
+            if (!isChecked) {
+                url = 'card-remove-label/'
+            } 
+
+            $.ajax({
+                type: 'POST',
+                url,
+                data: { labelPK, cardPK },
+                contentType: 'application/json',
+                success: function (data, textStatus, xhr) {
+                    
+                },  
+                error: function (xhr, textStatus, errorThrown) {  
+                    console.log('Error in Operation');  
+                }  
+            });  
+        })
+
         $(".menu-item").on("click", (e) => {
             e.preventDefault();
             const parent = $(e.target).parent()
@@ -145,7 +236,11 @@
         });
 
         $('#card-modal').on('hidden.bs.modal', function () {
-            comment.val('') 
+            comment.val('')
+        })
+
+        $('.modal').on('hidden.bs.modal', function () {
+            window.location.href = ''
         })
 
         
@@ -231,6 +326,60 @@
         fetchActivityLog()
         fetchArchivedLists()
         fetchArchivedCards()
+
+        function addLabel() {
+            const labelText = $('#labels-modal .new-label-text-inp').val()
+            const labelColor = $('#labels-modal .new-label-color-select').val()
+            const $boardLabels = $('#labels-modal .board-labels')
+            const $boardLabelsErrMsg = $('#labels-modal .error-message').html('')
+            $.ajax({
+                type: 'POST',
+                url: 'add-label/',
+                data: {
+                    text: labelText,
+                    color: labelColor
+                },
+                contentType: 'application/json',
+                success: function ({label, status, message}, textStatus, xhr) {
+                    console.log(status)
+                    if (status === 'success') {
+                        $boardLabels.append(`
+                            <span class="badge badge-${label.color} badge-pill">
+                                <span class="align-middle">${label.text}</span>
+                                <span class="ml-1 badge badge-pill badge-light text-dark" onclick="deleteLabel(event, ${label.id})">x</span>
+                            </span>
+                        `)
+                    } else {
+                        $boardLabelsErrMsg.html(`
+                            <div class="alert alert-danger" role="alert">
+                                ${message}
+                            </div>
+                        `)
+                    }
+                },  
+                error: function (xhr, textStatus, errorThrown) {  
+                    console.log('Error in Operation');  
+                }  
+            });  
+        }
+
+        function deleteLabel(e, pk) {
+            $.ajax({
+                type: 'DELETE',
+                url: 'delete-label/',
+                data: { pk },
+                contentType: 'application/json',
+                success: function (data, textStatus, xhr) {
+                   // remove label in labels modal
+                   $(e.target).parent().remove()                   
+                   // remove label in cards modal
+                   $(`#card-modal #label-${pk}`).parent().remove()
+                },  
+                error: function (xhr, textStatus, errorThrown) {  
+                    console.log('Error in Operation');  
+                }  
+            });
+        }
 
         function leaveBoard() {
             $.ajax({
@@ -344,7 +493,7 @@
         }
 
         function showCardModal(listPK, cardPK, title) {
-            console.log(listPK)
+            $('#card-modal').data('id', cardPK)
             $("#card-modal .modal-header")
                 .html(`<span onclick="editTitle(event, '${title}', ${cardPK}, setCardTitle, ${listPK})">${title}</span>`)
             $("#card-modal .save-btn").attr("onclick", `saveComment(${cardPK}, ${listPK})`);
@@ -448,12 +597,22 @@
                     // window.location.href = data.redirect
                     //$("#card-modal .card-comments").html(comments)
                     const comments = data.card_comments
+                    const labels = data.card_labels
+                    const labels_PK = labels.map(label => label.id)
                     $('#card-modal .card-comments').html('')
+                    $('#card-modal .badgebox').each((idx, e) => {
+                        if (labels_PK.includes($(e).data('id'))) {
+                            e.checked = true
+                        } else {
+                            e.checked = false
+                        }
+                    })
+
                     comments.forEach(c => {
                         if (!c.is_archived) {
                             const deleteBtn = c.frm_id === userPK ? 
-                            `<button class="btn btn-link text-danger" 
-                                onclick="deleteComment(${listPK}, ${c.card_id}, ${c.id})">delete</button>` : ''
+                                `<button class="btn btn-link text-danger" 
+                                    onclick="deleteComment(${listPK}, ${c.card_id}, ${c.id})">delete</button>` : ''
                                 
                             const replyBtn = c.frm_id !== userPK ?
                                 `<button class="btn btn-link text-info" 
